FIX: swipe for experience on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -977,11 +977,9 @@ h2:hover {
 .experience-image {
   width: 100dvw;
   height: 60%;
-  padding-inline: 20dvw;
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 .experience-image lottie-player,
